@@ -1,3 +1,8 @@
+2011-03-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* preferences/plugin.py: Added support for auth info on the Plugin
+	  Treeview.
+
 2011-03-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/facebook.py: Added support for 'News Feed' and 'Wall'.
